<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bignerdranch.android.fishfarm.MainActivity">

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
          <LinearLayout
              android:id="@+id/temperature_measuring"
              android:layout_width="105dp"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/button_border"
              android:layout_marginLeft="50dp"
              android:layout_marginTop="100dp"
              >
              <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:src="@drawable/temperature"
                  android:paddingHorizontal="20dp"/>
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/temperature"
                  android:textAlignment="center"
                  android:textColor="@color/colorPrimaryDark"/>
          </LinearLayout>
          <LinearLayout
              android:id="@+id/water_measuring"
              android:layout_width="105dp"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/button_border"
              android:layout_marginLeft="50dp"
              android:layout_marginTop="100dp">
              <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:src="@drawable/water"
                  android:paddingHorizontal="20dp"/>
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/water_condition"
                  android:textAlignment="center"
                  android:textColor="@color/colorPrimaryDark"/>
          </LinearLayout>
      </LinearLayout>
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
          <LinearLayout
              android:id="@+id/feeding"
              android:layout_width="105dp"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/button_border"
              android:layout_marginLeft="50dp"
              android:layout_marginTop="100dp">
              <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:src="@drawable/feed"
                  android:paddingHorizontal="20dp"/>
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/feed"
                  android:textAlignment="center"
                  android:layout_marginTop="10dp"
                  android:textColor="@color/colorPrimaryDark"/>
          </LinearLayout>
          <LinearLayout
              android:id="@+id/spawning"
              android:layout_width="105dp"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/button_border"
              android:layout_marginLeft="50dp"
              android:layout_marginTop="100dp">
              <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="50dp"
                  android:src="@drawable/fish"
                  android:paddingHorizontal="20dp"/>
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/spawning"
                  android:layout_marginLeft="20dp"
                  android:textColor="@color/colorPrimaryDark"/>
          </LinearLayout>
      </LinearLayout>
  </LinearLayout>
</android.support.constraint.ConstraintLayout>
