<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bignerdranch.android.fishfarm.WaterConditionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#e6e6e6">
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:id="@+id/choose_pool"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/date_last_change"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </LinearLayout>

        <Button
            android:id="@+id/change_date"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/border_for_log_in"
            android:text="@string/change_data"
            android:textSize="17sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/grey_"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">



            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:theme="@style/CircularProgress"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/oxygen_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/measure_oxygen"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_for_log_in"
                android:text="@string/measure_oxygen"
                android:textSize="17sp"
                android:textColor="@color/grey_"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"

                />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
